/**
 * Copyright (C) 2011 Metamarkets http://metamx.com
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/**
 *
 */
package metamx.milano;

option java_package = "com.metamx.milano.generated.io";

import "descriptor.proto";


message TypeMetadata {
  required string type_name = 1;
  required string type_package_name = 2;
  required google.protobuf.FileDescriptorProto type_file_descriptor = 3;
  optional google.protobuf.FileDescriptorSet type_dependencies = 4;

  repeated FileMetadata file_metadata = 5;
}

message FileMetadata {
  required string key = 1;
  optional bytes value = 2;
}
