/**
 * Copyright (C) 2011 Metamarkets http://metamx.com
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
/**
 *
 */
package metamx.milano;

option java_package = "com.metamx.milano.proto";

message TestItem {
  required int32 id = 1;
  required string name = 2;

  enum Type {
    FOO = 0;
    BAR = 1;
    BAZ = 2;
  }
  optional Type type = 3;

  message SubItem {
    required string name = 1;
    optional int32 id = 2;
  }

  // Intentionally out of order. This catches a problem with iterating over the fields wherein you update a builder
  // using the number for the index, which are disjoint in this case, but match up when the fields are in order
  optional SubItem item = 5;

  repeated string data = 4;
}
